[package]
name = "peaplex"
version = "0.1.0"
authors = ["ljedrz <ljedrz@gmail.com>"]
edition = "2024"
description = "A profoundly minimal, zero-copy stream multiplexer for any AsyncRead + AsyncWrite connection."
license = "CC0-1.0 OR MIT"
repository = "https://github.com/ljedrz/peaplex"
homepage = "https://github.com/ljedrz/peaplex"
documentation = "https://docs.rs/peaplex"
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["mplex", "multiplexer", "p2p", "networking", "zero-copy"]
rust-version = "1.88"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
parking_lot = "0.12"

[dev-dependencies]
pea2pea = "0.56"
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
